--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -1,32 +1,44 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "ec96278e",
-   "metadata": {},
-   "source": [
-    "# Exploratory Data Analysis (EDA)\n",
-    "\n",
-    "## Project Overview\n",
-    "\n",
-    "Customer churn is a critical problem for the banking industry: retaining existing customers is significantly cheaper than acquiring new ones. This project aims to build an end-to-end **machine learning pipeline** to predict customer churn and to identify the key factors that influence a customer's decision to leave the bank.\n",
-    "\n",
-    "## EDA Objectives\n",
-    "\n",
-    "This notebook covers:\n",
-    "* Dataset overview and data quality checks\n",
-    "* Class balance analysis\n",
-    "* Feature distributions\n",
-    "* Comparison of churned vs non-churned customers\n",
-    "* Initial business insights\n"
-   ]
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "ec96278e",
+      "metadata": {
+        "id": "ec96278e"
+      },
+      "source": [
+        "# Exploratory Data Analysis (EDA)\n",
+        "\n",
+        "## Project Overview\n",
+        "\n",
+        "Customer churn is a critical problem for the banking industry: retaining existing customers is significantly cheaper than acquiring new ones. This project aims to build an end-to-end **machine learning pipeline** to predict customer churn and to identify the key factors that influence a customer's decision to leave the bank.\n",
+        "\n",
+        "## EDA Objectives\n",
+        "\n",
+        "This notebook covers:\n",
+        "* Dataset overview and data quality checks\n",
+        "* Class balance analysis\n",
+        "* Feature distributions\n",
+        "* Comparison of churned vs non-churned customers\n",
+        "* Initial business insights\n",
+        "\n",
+        "sync test\n"
+      ]
+    }
+  ],
+  "metadata": {
+    "language_info": {
+      "name": "python"
+    },
+    "colab": {
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
