commit from Colab

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -110,11 +110,11 @@
         "os.listdir(dataset_path)\n"
       ],
       "metadata": {
-        "id": "kyWtZasgTWMX",
-        "outputId": "224012e1-c87b-42b2-afa0-827f28d6b5c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kyWtZasgTWMX",
+        "outputId": "224012e1-c87b-42b2-afa0-827f28d6b5c8"
       },
       "id": "kyWtZasgTWMX",
       "execution_count": 10,
@@ -157,12 +157,12 @@
         "df.head()\n"
       ],
       "metadata": {
-        "id": "tTUhCZgmTaLX",
-        "outputId": "8b59d7de-cf98-4c04-c4a4-493d6a42c947",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 260
-        }
+        },
+        "id": "tTUhCZgmTaLX",
+        "outputId": "8b59d7de-cf98-4c04-c4a4-493d6a42c947"
       },
       "id": "tTUhCZgmTaLX",
       "execution_count": 12,
@@ -527,6 +527,195 @@
           "execution_count": 12
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dataset Structure and Data Types\n",
+        "\n",
+        "Before any transformations, we inspect the structure of the dataset:\n",
+        "- number of rows and columns\n",
+        "- data types\n",
+        "- presence of missing values\n",
+        "\n",
+        "This step helps identify potential preprocessing requirements.\n"
+      ],
+      "metadata": {
+        "id": "R7Lxc4bTXlPt"
+      },
+      "id": "R7Lxc4bTXlPt"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.info()\n"
+      ],
+      "metadata": {
+        "id": "u0h-1RIbXnaa",
+        "outputId": "08d86282-f181-4ed5-c0db-7119691fe9c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "u0h-1RIbXnaa",
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 10000 entries, 0 to 9999\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column            Non-Null Count  Dtype  \n",
+            "---  ------            --------------  -----  \n",
+            " 0   customer_id       10000 non-null  int64  \n",
+            " 1   credit_score      10000 non-null  int64  \n",
+            " 2   country           10000 non-null  object \n",
+            " 3   gender            10000 non-null  object \n",
+            " 4   age               10000 non-null  int64  \n",
+            " 5   tenure            10000 non-null  int64  \n",
+            " 6   balance           10000 non-null  float64\n",
+            " 7   products_number   10000 non-null  int64  \n",
+            " 8   credit_card       10000 non-null  int64  \n",
+            " 9   active_member     10000 non-null  int64  \n",
+            " 10  estimated_salary  10000 non-null  float64\n",
+            " 11  churn             10000 non-null  int64  \n",
+            "dtypes: float64(2), int64(8), object(2)\n",
+            "memory usage: 937.6+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dataset Overview\n",
+        "\n",
+        "Based on the dataset structure, we observe:\n",
+        "- 10,000 customer records\n",
+        "- 12 columns in total\n",
+        "- No missing values\n",
+        "- A mix of numerical and categorical features\n",
+        "\n",
+        "Before proceeding further, we explicitly identify feature types\n",
+        "to structure the exploratory analysis.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "LxoaB85HXpTa"
+      },
+      "id": "LxoaB85HXpTa"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "TARGET_COL = \"churn\"\n",
+        "\n",
+        "# Numerical features (excluding target)\n",
+        "numerical_features = [\n",
+        "    col for col in df.select_dtypes(include=[\"int64\", \"float64\"]).columns\n",
+        "    if col != TARGET_COL and col != \"customer_id\"\n",
+        "]\n",
+        "\n",
+        "# Categorical features\n",
+        "categorical_features = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+        "\n",
+        "numerical_features, categorical_features\n"
+      ],
+      "metadata": {
+        "id": "SRG0wOd1Yhh2",
+        "outputId": "42c77e14-7abc-41d4-cdc6-de2855206423",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "SRG0wOd1Yhh2",
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(['credit_score',\n",
+              "  'age',\n",
+              "  'tenure',\n",
+              "  'balance',\n",
+              "  'products_number',\n",
+              "  'credit_card',\n",
+              "  'active_member',\n",
+              "  'estimated_salary'],\n",
+              " ['country', 'gender'])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Target Variable Distribution\n",
+        "\n",
+        "We now analyze the distribution of the target variable.\n",
+        "This step is important to assess potential class imbalance\n",
+        "and to guide metric selection in later stages.\n"
+      ],
+      "metadata": {
+        "id": "kSRJi2e8ZDWn"
+      },
+      "id": "kSRJi2e8ZDWn"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "churn_counts = df[TARGET_COL].value_counts()\n",
+        "churn_ratio = df[TARGET_COL].value_counts(normalize=True)\n",
+        "\n",
+        "churn_counts, churn_ratio\n"
+      ],
+      "metadata": {
+        "id": "D-7C-7DBZFE0",
+        "outputId": "8dddd9f8-1035-4ace-eef2-6c273f8f5e88",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "D-7C-7DBZFE0",
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(churn\n",
+              " 0    7963\n",
+              " 1    2037\n",
+              " Name: count, dtype: int64,\n",
+              " churn\n",
+              " 0   0.796\n",
+              " 1   0.204\n",
+              " Name: proportion, dtype: float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Initial Observation\n",
+        "\n",
+        "The dataset shows a moderate class imbalance, which is typical for churn problems.\n",
+        "This will be taken into account during model evaluation and threshold selection.\n"
+      ],
+      "metadata": {
+        "id": "rawTiO64ZGXq"
+      },
+      "id": "rawTiO64ZGXq"
     }
   ],
   "metadata": {
