--- a/notebooks/03_modeling.ipynb
+++ b/notebooks/03_modeling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFYHIhfOxHCaavQK+bkXZ+"
+      "authorship_tag": "ABX9TyOrJSCrKJUNoclnaV5f8007"
     },
     "kernelspec": {
       "name": "python3",
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "aiBhUq9xN__v"
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -81,6 +81,30 @@
       "metadata": {
         "id": "E5-C0-0COG6_"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Clone project repository (required in Colab)\n",
+        "!git clone https://github.com/laser54/bank-churn-prediction.git\n"
+      ],
+      "metadata": {
+        "id": "_QTWuvbXSk7-",
+        "outputId": "18720f34-3608-4bc4-a7cb-2262a5d50443",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: destination path 'bank-churn-prediction' already exists and is not an empty directory.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -102,9 +126,9 @@
           "height": 373
         },
         "id": "R-1AGwUjOK65",
-        "outputId": "732760f1-3fb4-4316-f323-114fe6d75648"
+        "outputId": "0aee9be8-5f5d-42dc-f245-36595c7f11c6"
       },
-      "execution_count": 2,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "error",
@@ -122,6 +146,21 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pathlib import Path\n",
+        "import os\n",
+        "\n",
+        "print(\"CWD:\", Path.cwd())\n",
+        "print(\"Files here:\", os.listdir(\".\"))\n"
+      ],
+      "metadata": {
+        "id": "hj8rAsXfRLzk"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
