--- a/notebooks/03_modeling.ipynb
+++ b/notebooks/03_modeling.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrJSCrKJUNoclnaV5f8007"
+      "authorship_tag": "ABX9TyN+CQRcir8T6Z4b0lI6y/Eb"
     },
     "kernelspec": {
       "name": "python3",
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "aiBhUq9xN__v"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -73,10 +73,11 @@
       "source": [
         "## Load Preprocessing Artifacts\n",
         "\n",
-        "We load the processed datasets and preprocessing artifacts\n",
-        "produced in `02_preprocessing.ipynb`.\n",
+        "In this notebook we load preprocessing outputs generated in\n",
+        "`02_preprocessing.ipynb`.\n",
         "\n",
-        "This ensures full consistency between preprocessing and modeling stages.\n"
+        "Artifacts are expected to be present in the current Colab runtime\n",
+        "under the `artifacts/` directory.\n"
       ],
       "metadata": {
         "id": "E5-C0-0COG6_"
@@ -85,64 +86,46 @@
     {
       "cell_type": "code",
       "source": [
-        "# Clone project repository (required in Colab)\n",
-        "!git clone https://github.com/laser54/bank-churn-prediction.git\n"
-      ],
-      "metadata": {
-        "id": "_QTWuvbXSk7-",
-        "outputId": "18720f34-3608-4bc4-a7cb-2262a5d50443",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: destination path 'bank-churn-prediction' already exists and is not an empty directory.\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Path to artifacts directory\n",
-        "ARTIFACTS_DIR = Path(\"../artifacts\")\n",
+        "from pathlib import Path\n",
+        "import pandas as pd\n",
         "\n",
-        "# Load datasets\n",
+        "ARTIFACTS_DIR = Path(\"/content/artifacts\")\n",
+        "\n",
+        "assert ARTIFACTS_DIR.exists(), (\n",
+        "    \"Artifacts directory not found. \"\n",
+        "    \"Run 02_preprocessing.ipynb in the same Colab runtime first.\"\n",
+        ")\n",
+        "\n",
+        "print(\"Using artifacts directory:\", ARTIFACTS_DIR.resolve())\n",
+        "\n",
         "X_train = pd.read_parquet(ARTIFACTS_DIR / \"X_train.parquet\")\n",
-        "X_test = pd.read_parquet(ARTIFACTS_DIR / \"X_test.parquet\")\n",
-        "y_train = pd.read_parquet(ARTIFACTS_DIR / \"y_train.parquet\")[\"churn\"]\n",
-        "y_test = pd.read_parquet(ARTIFACTS_DIR / \"y_test.parquet\")[\"churn\"]\n",
+        "X_test  = pd.read_parquet(ARTIFACTS_DIR / \"X_test.parquet\")\n",
         "\n",
-        "X_train.shape, X_test.shape\n"
+        "y_train = pd.read_parquet(ARTIFACTS_DIR / \"y_train.parquet\")[\"churn\"]\n",
+        "y_test  = pd.read_parquet(ARTIFACTS_DIR / \"y_test.parquet\")[\"churn\"]\n",
+        "\n",
+        "X_train.shape, X_test.shape\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 373
+          "height": 228
         },
         "id": "R-1AGwUjOK65",
-        "outputId": "0aee9be8-5f5d-42dc-f245-36595c7f11c6"
+        "outputId": "378be17e-25cd-4858-eed8-9b4eb38b439b"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: '../artifacts/X_train.parquet'",
+          "ename": "AssertionError",
+          "evalue": "Artifacts directory not found. Run 02_preprocessing.ipynb in the same Colab runtime first.",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1506707564.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Load datasets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mX_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_parquet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mARTIFACTS_DIR\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m\"X_train.parquet\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mX_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_parquet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mARTIFACTS_DIR\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m\"X_test.parquet\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0my_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_parquet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mARTIFACTS_DIR\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m\"y_train.parquet\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"churn\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parquet.py\u001b[0m in \u001b[0;36mread_parquet\u001b[0;34m(path, engine, columns, storage_options, use_nullable_dtypes, dtype_backend, filesystem, filters, **kwargs)\u001b[0m\n\u001b[1;32m    665\u001b[0m     \u001b[0mcheck_dtype_backend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtype_backend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    666\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 667\u001b[0;31m     return impl.read(\n\u001b[0m\u001b[1;32m    668\u001b[0m         \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    669\u001b[0m         \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parquet.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, path, columns, filters, use_nullable_dtypes, dtype_backend, storage_options, filesystem, **kwargs)\u001b[0m\n\u001b[1;32m    265\u001b[0m             \u001b[0mto_pandas_kwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"split_blocks\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m  \u001b[0;31m# type: ignore[assignment]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    266\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 267\u001b[0;31m         path_or_handle, handles, filesystem = _get_path_or_handle(\n\u001b[0m\u001b[1;32m    268\u001b[0m             \u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    269\u001b[0m             \u001b[0mfilesystem\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/parquet.py\u001b[0m in \u001b[0;36m_get_path_or_handle\u001b[0;34m(path, fs, storage_options, mode, is_dir)\u001b[0m\n\u001b[1;32m    138\u001b[0m         \u001b[0;31m# fsspec resources can also point to directories\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    139\u001b[0m         \u001b[0;31m# this branch is used for example when reading from non-fsspec URLs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 140\u001b[0;31m         handles = get_handle(\n\u001b[0m\u001b[1;32m    141\u001b[0m             \u001b[0mpath_or_handle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_text\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstorage_options\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstorage_options\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    142\u001b[0m         )\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    880\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    881\u001b[0m             \u001b[0;31m# Binary mode\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 882\u001b[0;31m             \u001b[0mhandle\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    883\u001b[0m         \u001b[0mhandles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    884\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../artifacts/X_train.parquet'"
+            "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-4284060031.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mARTIFACTS_DIR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/content/artifacts\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m assert ARTIFACTS_DIR.exists(), (\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;34m\"Artifacts directory not found. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;34m\"Run 02_preprocessing.ipynb in the same Colab runtime first.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAssertionError\u001b[0m: Artifacts directory not found. Run 02_preprocessing.ipynb in the same Colab runtime first."
           ]
         }
       ]
@@ -150,14 +133,29 @@
     {
       "cell_type": "code",
       "source": [
-        "from pathlib import Path\n",
-        "import os\n",
+        "import pandas as pd\n",
         "\n",
-        "print(\"CWD:\", Path.cwd())\n",
-        "print(\"Files here:\", os.listdir(\".\"))\n"
+        "X_train = pd.read_parquet(ARTIFACTS_DIR / \"X_train.parquet\")\n",
+        "X_test  = pd.read_parquet(ARTIFACTS_DIR / \"X_test.parquet\")\n",
+        "\n",
+        "y_train = pd.read_parquet(ARTIFACTS_DIR / \"y_train.parquet\")[\"churn\"]\n",
+        "y_test  = pd.read_parquet(ARTIFACTS_DIR / \"y_test.parquet\")[\"churn\"]\n",
+        "\n",
+        "X_train.shape, X_test.shape\n"
       ],
       "metadata": {
         "id": "hj8rAsXfRLzk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train.head(), y_train.value_counts(normalize=True)\n"
+      ],
+      "metadata": {
+        "id": "tgn-AXGZWn4a"
       },
       "execution_count": null,
       "outputs": []
